--- a/About.html
+++ b/About.html
@@ -14,6 +14,7 @@
 <header id="mainbar" class="main-bar">
     <a href="index.html"><i class="tapbut fas fa-home"></i></a>
     <a href="wallpapers.html"><i class="tapbut fas fa-mobile"></i></a>
+    <a href="threedmodels.html"><i class="tapbut fas fa-cubes"></i></a>
     <a href="djs.html"><i class="tapbut far fa-play-circle"></i></a>
     <a href="About.html"><i style="color:#3CA2C8;" class="tapbut far fa-user-circle"></i></a>
 </header>
@@ -54,19 +55,6 @@
                         class=" socialicon fab fa-twitter"></i></a>
             </div>
         </section>
-
-
-        <video controls>
-
-
-            <source src="https://www.youtube.com/embed/p4_AmyndTcA" type="video/link">
-
-            <source src="videos/STUPID.mp4" type="video/mp4">
-
-
-
-            Sorry, your browser doesn't support embedded videos.
-        </video>
 
         <footer>
             <a href="https://www.instagram.com/stupid_version_studio/">
