--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 <div id="mainbar" class="main-bar">
     <a href="index.html"><i style="color:#3CA2C8;" class="tapbut fas fa-home"></i></a>
     <a href="wallpapers.html"><i class="tapbut fas fa-mobile"></i></a>
+    <a href="threedmodels.html"><i class="tapbut fas fa-cubes"></i></a>
     <a href="djs.html"><i class="tapbut far fa-play-circle"></i></a>
     <a href="About.html"><i class="tapbut far fa-user-circle"></i></a>
 </div>
@@ -23,11 +24,11 @@
 <body>
     <section class="coversection">
 
-        <section class="vbg">
-            <video autoplay loop muted>
-                <source src="videos/lg.mp4" type="video/mp4">
-                Sorry, your browser doesn't support embedded videos.
-            </video>
+        <section id="namesection" class="namesection">
+            <div class="flex">
+                <h1 id="header">Stupid Version Studio</h1>
+                <p> Love To Do Stupid Things</p>
+            </div>
         </section>
 
         <section class="bloc">
@@ -128,14 +129,6 @@
 
         </section>
 
-
-        <section class="bloc">
-            <h2 class="subheading"><i class="fas fa-shapes"></i> 3D Models</h2>
-
-            <iframe class="models" width="100%" height="auto" src="https://poly.google.com/view/9KrjaH_h0CP/embed" frameborder="0" style="border:none;" allowvr="yes" allow="vr; xr; accelerometer; magnetometer; gyroscope; autoplay;" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel="" ></iframe>
-           
-
-        </section>
 
         <section class="bloc">
             <h2 class="subheading"><i class="fab fa-instagram"></i>  Instagram Filters</h2>
