--- a/djs.html
+++ b/djs.html
@@ -14,11 +14,11 @@
     <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' />
 </head>
 <header id="mainbar" class="main-bar">
-    <a href="index.html"><i class="tapbut fas fa-home"></i></a>
-    <a href="wallpapers.html"><i class="tapbut fas fa-mobile"></i></a>
-    <a href="threedmodels.html"><i class="tapbut fas fa-cubes"></i></a>
-    <a href="djs.html"><i style="color:#3CA2C8;" class="tapbut far fa-play-circle"></i></a>
-    <a href="About.html"><i class="tapbut far fa-user-circle"></i></a>
+    <a href="index.html"><i  class="tapbut fas fa-home"></i><span> Home</span></a>
+    <a href="wallpapers.html"><i class="tapbut fas fa-mobile"></i><span> Wallpapers</span></a>
+    <a href="threedmodels.html"><i class="tapbut fas fa-cubes"></i><span> 3D Models</span></a>
+    <a href="djs.html"><i style="color:#3CA2C8;" class="tapbut far fa-play-circle"></i><span> DJ S</span></a>
+    <a href="About.html"><i class="tapbut far fa-user-circle"></i><span> About</span></a>
 </header>
 
 
