--- a/About.html
+++ b/About.html
@@ -37,7 +37,7 @@
                 donate me to get a domaine go a head.Thank you.</h4>
 
             <a href="https://www.paypal.me/stupidversion">
-                <h3 class="btn" style="width:90%;">Donate via paypal</h3>
+                <h3 class="btn" >Buy A Tea for me ! </h3>
             </a>
 
         </section>
@@ -54,6 +54,10 @@
                 <a class="twitter" href="https://twitter.com/VersionStupid"><i
                         class=" socialicon fab fa-twitter"></i></a>
             </div>
+
+            <a href="@VG.html">
+                <h3 class="btn"> Who is the CEO</h3>
+            </a>
         </section>
 
         <footer>
