--- a/@VG.html
+++ b/@VG.html
@@ -15,7 +15,7 @@
    <img src="images/ceo.jpg" alt="ceo" >
   
   <h1>VG</h1>
-  <h3>CEO - Founder</h3>
+  <h3>Founder - Creator</h3>
 
       
   <div class="social">
