--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en" xml:lang="en" xmlns="http://www.w3.org/1999/xhtml">
-
 <head>
     <title>Stupid Version Studio</title>
     <link href="style.css" rel="stylesheet">
@@ -12,16 +11,16 @@
     <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' />
 </head>
 <div id="mainbar" class="main-bar">
-    <a href="index.html"><i style="color:#3CA2C8;"  class="tapbut fas fa-home"></i><span> Home</span></a>
-    <a href="wallpapers.html"><i class="tapbut fas fa-mobile"></i><span> Wallpapers</span></a>
-    <a href="threedmodels.html"><i class="tapbut fas fa-cubes"></i><span> 3D Models</span></a>
-    <a href="djs.html"><i class="tapbut far fa-play-circle"></i><span> DJ S</span></a>
-    <a href="About.html"><i class="tapbut far fa-user-circle"></i><span> About</span></a>
+    <a href="index.html"><div class="flex"><img class="offlogo" src="images/SVS LOGO OFFICIAL.svg" alt="logoofficial"><span> Home</span></div></a>
+    <a href="wallpapers.html"><div class="flex"><i class="tapbut fas fa-mobile"></i><span> Wallpapers</span></div></a>
+    <a href="threedmodels.html"><div class="flex"><i class="tapbut fas fa-cubes"></i><span> 3D Models</span></div></a>
+    <a href="djs.html"><div class="flex"><img class="offlogo" src="djthings/DJ S LOGO.png" alt="logoofficial"><span> DJ S</span></div></a>
+    <a href="https://teespring.com/stores/stupid-version-studio"><div class="flex"><i class="tapbut fas fa-shopping-basket"></i><span> Shop</span></div></a>
+    <a href="About.html"><div class="flex"><i class="tapbut far fa-user-circle"></i><span> About</span></div></a>
 </div>
 
 <body>
     <section class="coversection">
-
         <section id="namesection" class="namesection">
             <div class="flex">
                 <h1 id="header">Stupid Version Studio</h1>
@@ -52,7 +51,6 @@
                     </a>
                 </div>
 
-
                 <div class="productcover">
                     <div class="sale">
                         <div class="pot">
@@ -68,6 +66,7 @@
                         <h3 class="btn">Download</h3>
                     </a>
                 </div>
+
                 <div class="productcover">
                     <div class="sale">
                         <div class="pot">
@@ -83,6 +82,7 @@
                         <h3 class="btn">Download</h3>
                     </a>
                 </div>
+
             </section>
 
             <section class="bloc">
@@ -97,7 +97,6 @@
                             <h3 class="line">Bigil</h3>
                             <h4>Filter by Us , Take Selfies and share it to your friends on #Instagram</h4>
                             <h4>Thank You for your feedbacks and shares</h4>
-    
                         </div>
                     </div>
                     <a href="https://www.instagram.com/a/r/?effect_id=603678986832523">
@@ -114,19 +113,18 @@
                             <h3 class="line">Bigie</h3>
                             <h4>Filter by Us , Take Selfies and share it to your friends on #Instagram</h4>
                             <h4>Thank You for your feedbacks and shares</h4>
-    
                         </div>
                     </div>
                     <a href="https://www.instagram.com/a/r/?effect_id=2431084013883394">
                         <h3 class="btn">Try It</h3>
                     </a>
                 </div>
+
             </section>
 
             <section class="bloc">
+
                 <h2 class="subheading"><i class="fas fa-network-wired"></i> Web Sites</h2>
-
-
                 <div class="productcover">
                     <div class="sale">
                         <div class="pot">
@@ -175,7 +173,6 @@
             </section>
 
             <section class="bloc">
-
                 <h2 class="subheading"><i class="fas fa-tshirt"></i> Our Brand Dresses</h2>
 
                 <div class="productcover">
@@ -191,6 +188,7 @@
                         <h3 class="btn">Go To Site</h3>
                     </a>
                 </div>
+
             </section>
 
             <section class="bloc">
