--- a/wallpapers.html
+++ b/wallpapers.html
@@ -13,14 +13,14 @@
     <link href="https://use.fontawesome.com/releases/v5.11.2/css/all.css" rel="stylesheet">
     <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' />
 </head>
-<header id="mainbar" class="main-bar">
-    <a href="index.html"><i  class="tapbut fas fa-home"></i><span> Home</span></a>
-    <a href="wallpapers.html"><i style="color:#3CA2C8;" class="tapbut fas fa-mobile"></i><span> Wallpapers</span></a>
-    <a href="threedmodels.html"><i class="tapbut fas fa-cubes"></i><span> 3D Models</span></a>
-    <a href="djs.html"><i class="tapbut far fa-play-circle"></i><span> DJ S</span></a>
-    <a href="About.html"><i class="tapbut far fa-user-circle"></i><span> About</span></a>
-</header>
-
+<div id="mainbar" class="main-bar">
+    <a href="index.html"><div class="flex"><img class="offlogo" src="images/SVS LOGO OFFICIAL.svg" alt="logoofficial"><span> Home</span></div></a>
+    <a href="wallpapers.html"><div class="flex"><i class="tapbut fas fa-mobile"></i><span> Wallpapers</span></div></a>
+    <a href="threedmodels.html"><div class="flex"><i class="tapbut fas fa-cubes"></i><span> 3D Models</span></div></a>
+    <a href="djs.html"><div class="flex"><img class="offlogo" src="djthings/DJ S LOGO.png" alt="logoofficial"><span> DJ S</span></div></a>
+    <a href="https://teespring.com/stores/stupid-version-studio"><div class="flex"><i class="tapbut fas fa-shopping-basket"></i><span> Shop</span></div></a>
+    <a href="About.html"><div class="flex"><i class="tapbut far fa-user-circle"></i><span> About</span></div></a>
+</div>
 <body>
     <section class="coversection">
         <section id="namesection" class="namesection">
