--- a/djs.html
+++ b/djs.html
@@ -3,11 +3,9 @@
 
 <head>
     <title>S and Sons</title>
-    <script data-ad-client="ca-pub-2363440232574918" async
-        src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-    <link href="style.css" rel="stylesheet">
-    <link href="darktheme.css" rel="stylesheet">
-    <link href="responsive.css" rel="stylesheet">
+    <link href="scss/style.css" rel="stylesheet">
+    <link href="scss/darktheme.css" rel="stylesheet">
+    <link href="scss/responsive.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="djthings/DJ S LOGO.png">
     <link href="https://use.fontawesome.com/releases/v5.11.2/css/all.css" rel="stylesheet">
