--- a/threedmodels.html
+++ b/threedmodels.html
@@ -3,9 +3,9 @@
 
 <head>
     <title>3D MODELS</title>
-    <link href="style.css" rel="stylesheet">
-    <link href="darktheme.css" rel="stylesheet">
-    <link href="responsive.css" rel="stylesheet">
+    <link href="scss/style.css" rel="stylesheet">
+    <link href="scss/darktheme.css" rel="stylesheet">
+    <link href="scss/responsive.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="images/SVS LOGO OFFICIAL.svg">
     <link href="https://use.fontawesome.com/releases/v5.11.2/css/all.css" rel="stylesheet">
