--- a/@VG.html
+++ b/@VG.html
@@ -11,10 +11,22 @@
     <link href="https://use.fontawesome.com/releases/v5.11.2/css/all.css" rel="stylesheet">
     <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' />
 </head>
+
 <body>
-   <img src="images/ceo.jpg" alt="ceo" >
+    <header class="nav-bar">
+        <div  class="navs">
+            <a href="index.html"><div class="flex"><img class="offlogo" src="images/SVS LOGO OFFICIAL.svg" alt="logoofficial"><span> Home</span></div></a>
+            <a href="wallpapers.html"><div class="flex"><i class="tapbut fas fa-mobile"></i><span> Wallpapers</span></div></a>
+            <a href="threedmodels.html"><div class="flex"><i class="tapbut fas fa-cubes"></i><span> 3D Models</span></div></a>
+            <a href="djs.html"><div class="flex"><img class="offlogo" src="djthings/DJ S LOGO.png" alt="logoofficial"><span> DJ S</span></div></a>
+            <a href="https://teespring.com/stores/stupid-version-studio"><div class="flex"><i class="tapbut fas fa-shopping-basket"></i><span> Shop</span></div></a>
+            <a href="About.html"><div class="flex"><i class="tapbut far fa-user-circle"></i><span> About</span></div></a>
+        </div>
+        <h1 id="header">About the Founder - Creator</h1>
+</header>
+   <img class="ceo" src="images/ceo.jpg" alt="ceo" >
   
-  <h1>VG</h1>
+  <h3>VG</h3>
   <h3>Founder - Creator</h3>
 
       
@@ -50,17 +62,13 @@ body{
     width:10%;
 }
 
-body img{
-    width:30%;
+body .ceo{
+    width:20%;
     height: auto;
     border-radius: 50%;
-    border: 5px solid white;
+    border: 5px solid #012154;
     padding: 1%;
     margin: 1%;
-}
-
-h1{
-
 }
 
 </style>
