--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
     <link href="https://use.fontawesome.com/releases/v5.11.2/css/all.css" rel="stylesheet">
     <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' />
 </head>
-<div id="mainbar" class="main-bar">
+<body>
+<header class="nav-bar">
+<div  class="navs">
     <a href="index.html"><div class="flex"><img class="offlogo" src="images/SVS LOGO OFFICIAL.svg" alt="logoofficial"><span> Home</span></div></a>
     <a href="wallpapers.html"><div class="flex"><i class="tapbut fas fa-mobile"></i><span> Wallpapers</span></div></a>
     <a href="threedmodels.html"><div class="flex"><i class="tapbut fas fa-cubes"></i><span> 3D Models</span></div></a>
@@ -18,16 +20,10 @@
     <a href="https://teespring.com/stores/stupid-version-studio"><div class="flex"><i class="tapbut fas fa-shopping-basket"></i><span> Shop</span></div></a>
     <a href="About.html"><div class="flex"><i class="tapbut far fa-user-circle"></i><span> About</span></div></a>
 </div>
+<h1 id="header">Stupid Version Studio</h1>
+</header>
 
-<body>
     <section class="coversection">
-    <section id="namesection" class="namesection">
-       <div class="flex">
-          <h1 id="header">STUPID VERSION STUDIO</h1>
-          <p> Love To Do Stupid Things</p>
-       </div>
-    </section>
-
     <section class="bloc">
        <h2 class="subheading"><i class="fas fa-scroll"></i> Fonts</h2>
        <div class="productcover">
