--- a/@VG.html
+++ b/@VG.html
@@ -48,6 +48,7 @@
 </a>
 
 </body>
+
 <style>
 
 body{
@@ -72,4 +73,17 @@ body .ceo{
 }
 
 </style>
+<footer>
+    <h4>Version 3.0</h4>
+    <h4>Shout-out to these companies to make this website possible</h4>
+   <div class="footercontrol">
+   
+   <img src="images/blender.svg" alt="foot" >
+   <img src="images/google.png" alt="foot" >
+   <img src="images/adobe.png" alt="foot" >
+   <img src="images/github.png" alt="foot" >
+   
+   </div>
+   <h4>&copy;Stupid Version Studio</h4>
+   </footer>
 </html>
