--- a/About.html
+++ b/About.html
@@ -56,13 +56,19 @@
                 <h3 class="btn"> Who is the CEO</h3>
             </a>
         </section>
-
         <footer>
-            <a href="https://www.instagram.com/stupid_version_studio/">
-                <h3>&copy;Stupid Version Studio</h3>
-            </a>
-
-        </footer>
+            <h4>Version 3.0</h4>
+            <h4>Shout-out to these companies to make this website possible</h4>
+           <div class="footercontrol">
+           
+           <img src="images/blender.svg" alt="foot" >
+           <img src="images/google.png" alt="foot" >
+           <img src="images/adobe.png" alt="foot" >
+           <img src="images/github.png" alt="foot" >
+           
+           </div>
+           <h4>&copy;Stupid Version Studio</h4>
+           </footer>
     </section>
 </body>
 
