--- a/@VG.html
+++ b/@VG.html
@@ -31,9 +31,9 @@
 
       
   <div class="social">
-    <a class="mail" href="mailto:vishnugoby0010@gmail.com"><i class=" socialicon fa fa-envelope" aria-hidden="true"></i></a>
-    <a class="insta" href="https://www.instagram.com/__vishnu__10/"><i class=" socialicon fab fa-instagram"></i></a>
-    <a class="twitter" href="https://twitter.com/_Vishnu_10"><i class=" socialicon fab fa-twitter"></i></a>
+    <a class="contactbuts" href="mailto:vishnugoby0010@gmail.com"><i class=" socialicon fa fa-envelope" aria-hidden="true"></i><span>Gmail</span></a>
+    <a class="contactbuts" href="https://www.instagram.com/__vishnu__10/"><i class=" socialicon fab fa-instagram"></i><span>instagram</span></a>
+    <a class="contactbuts" href="https://twitter.com/_Vishnu_10"><i class=" socialicon fab fa-twitter"></i><span>Twitter</span></a>
   </div>
 
   <h4  style="width: 80%;">Hello! First of all Thank you very much for your interest in Stupid Version Studio Creators. And Yes! I'm the one and only creator behind this site . 
@@ -46,8 +46,20 @@
   <a href="index.html" style="width: 90%;">
     <h3 class="btn"> Back to Our Site</h3>
 </a>
+<footer>
+    <h4>Version 3.0</h4>
+    <h4>Shout-out to these companies to make this website possible</h4>
+   <div class="footercontrol">
+   
+   <img src="images/blender.svg" alt="foot" >
+   <img src="images/google.png" alt="foot" >
+   <img src="images/adobe.png" alt="foot" >
+   <img src="images/github.png" alt="foot" >
+   
+   </div>
+   <h4>&copy;Stupid Version Studio</h4>
+   </footer>
 
-</body>
 
 <style>
 
@@ -72,18 +84,11 @@ body .ceo{
     margin: 1%;
 }
 
+footer{
+    width: 80%;
+}
+
 </style>
-<footer>
-    <h4>Version 3.0</h4>
-    <h4>Shout-out to these companies to make this website possible</h4>
-   <div class="footercontrol">
-   
-   <img src="images/blender.svg" alt="foot" >
-   <img src="images/google.png" alt="foot" >
-   <img src="images/adobe.png" alt="foot" >
-   <img src="images/github.png" alt="foot" >
-   
-   </div>
-   <h4>&copy;Stupid Version Studio</h4>
-   </footer>
+
+</body>
 </html>
