--- a/About.html
+++ b/About.html
@@ -30,8 +30,7 @@
             <h4 style="padding:2%;">Hello , welcome to our site.
                 we are working alone to make this website possible to everyone. This is a Manpowered web site. Currently
                 we are two working behind this website.
-                Everything on this site made by us feel free to use.Anyways thank you for your support. If you can
-                donate me to get a domaine go a head.Thank you.</h4>
+                Everything on this site made by us feel free to use.Anyways thank you for your support.</h4>
 
             <a href="https://www.paypal.me/stupidversion">
                 <h3 class="btn" >Buy A Tea for me ! </h3>
@@ -42,18 +41,18 @@
         <section class="bloc">
             <h2 class="subheading"><i class="far fa-share-square"></i> You Can Find Us On</h2>
             <div class="social">
-                <a class="mail" href="mailto:stupidversion@gmail.com"><i class=" socialicon fa fa-envelope"
-                        aria-hidden="true"></i></a>
-                <a class="play" href="https://play.google.com/store/apps/dev?id=7891379765966516089"><i
-                        class=" socialicon fab fa-google-play"></i></a>
-                <a class="insta" href="https://www.instagram.com/stupid_version_studio/"><i
-                        class=" socialicon fab fa-instagram"></i></a>
-                <a class="twitter" href="https://twitter.com/VersionStupid"><i
-                        class=" socialicon fab fa-twitter"></i></a>
+                <a class="contactbuts" href="mailto:stupidversion@gmail.com"><i class=" socialicon fa fa-envelope"
+                        aria-hidden="true"></i><span>Gmail</span></a>
+                <a class="contactbuts" href="https://play.google.com/store/apps/dev?id=7891379765966516089"><i
+                        class=" socialicon fab fa-google-play"></i><span>Playstore</span></a>
+                <a class="contactbuts" href="https://www.instagram.com/stupid_version_studio/"><i
+                        class=" socialicon fab fa-instagram"></i><span>instagram</span></a>
+                <a class="contactbuts" href="https://twitter.com/VersionStupid"><i
+                        class=" socialicon fab fa-twitter"></i><span>Twitter</span></a>
             </div>
 
             <a href="@VG.html">
-                <h3 class="btn"> Who is the CEO</h3>
+                <h3 class="btn">More About Founder</h3>
             </a>
         </section>
         <footer>
