--- a/index.html
+++ b/index.html
@@ -6,17 +6,17 @@
     <link href="scss/darktheme.css" rel="stylesheet">
     <link href="scss/responsive.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="images/SVS LOGO OFFICIAL.svg">
+    <link rel="icon" href="images/logo colored.png">
     <link href="https://use.fontawesome.com/releases/v5.11.2/css/all.css" rel="stylesheet">
     <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' />
 </head>
 <body>
-<header class="nav-bar">
+<header >
 <div  class="navs">
-    <a href="index.html"><div class="flex"><img class="offlogo" src="images/SVS LOGO OFFICIAL.svg" alt="logoofficial"><span> Home</span></div></a>
+    <a href="index.html"><div class="flex"><i class="tapbut fas fa-bars"></i><span> Home</span></div></a>
     <a href="wallpapers.html"><div class="flex"><i class="tapbut fas fa-mobile"></i><span> Wallpapers</span></div></a>
     <a href="threedmodels.html"><div class="flex"><i class="tapbut fas fa-cubes"></i><span> 3D Models</span></div></a>
-    <a href="djs.html"><div class="flex"><img class="offlogo" src="djthings/DJ S LOGO.png" alt="logoofficial"><span> DJ S</span></div></a>
+    <a href="djs.html"><div class="flex"><i class="tapbut  fas fa-compact-disc"></i><span> DJ S</span></div></a>
     <a href="https://teespring.com/stores/stupid-version-studio"><div class="flex"><i class="tapbut fas fa-shopping-basket"></i><span> Shop</span></div></a>
     <a href="About.html"><div class="flex"><i class="tapbut far fa-user-circle"></i><span> About</span></div></a>
 </div>
@@ -32,14 +32,13 @@
                 <img class="log" src="images/GOSTA.jpg">
              </div>
              <div class="detailes">
-                <h3 class="line">GOSTA Font</h3>
+                <h3 class="line">Sv GOSTA Font</h3>
                 <h4>Only Capital Letters Will Support Keep In Mind , Thank You for Downloading and your feedbacks and shares
                 </h4>
              </div>
           </div>
-          <a href="Files/Gosta font.zip" download="GOSTA Font">
-             <h3 class="btn">Download</h3>
-          </a>
+          <a href="Files/Gosta font.zip" download="Sv GOSTA Font"><h3 class="btn"><i class="fas fa-download"></i> Download</h3></a>
+          <a href="https://www.paypal.me/stupidversion"><h3 class="btn" ><i class="fas fa-mug-hot"></i> Buy A Tea for me ! </h3></a>
        </div>
        <div class="productcover">
           <div class="sale">
@@ -47,28 +46,25 @@
                 <img class="log" src="images/kabavi%20font.jpg">
              </div>
              <div class="detailes">
-                <h3 class="line">KABAVI Font</h3>
+                <h3 class="line">Sv KABAVI Font</h3>
                 <h4>Only Capital Letters Will Support Keep In Mind , Thank You for Downloading and your feedbacks and shares</h4>
              </div>
           </div>
-          <a href="Files/KABAVI FONT.zip" download="KABAVI FONT">
-             <h3 class="btn">Download</h3>
-          </a>
+          <a href="Files/KABAVI FONT.zip" download="Sv KABAVI Font"><h3 class="btn"><i class="fas fa-download"></i> Download</h3></a>
+            <a href="https://www.paypal.me/stupidversion"><h3 class="btn" ><i class="fas fa-mug-hot"></i> Buy A Tea for me ! </h3></a>
        </div>
        <div class="productcover">
           <div class="sale">
              <div class="pot">
-                <img class="log" src="images/SSCOVER.jpg">
+                <img class="log" src="images/MASALVADA.jpg">
              </div>
              <div class="detailes">
-                <h3 class="line">SuperStar</h3>
-                <h4>Only Capital Letters Will Support Keep In Mind</h4>
+                <h3 class="line">Sv Masal vadai</h3>
                 <h4>Thank You for Downloading and your feedbacks and shares</h4>
              </div>
           </div>
-          <a href="Files/superstar-font.zip" download="SUPERSTAR ">
-             <h3 class="btn">Download</h3>
-          </a>
+          <a href="Files/SvMasalVada-Regular.rar" download="Sv Masal vadai "><h3 class="btn"><i class="fas fa-download"></i> Download</h3></a>
+          <a href="https://www.paypal.me/stupidversion"><h3 class="btn" ><i class="fas fa-mug-hot"></i> Buy A Tea for me ! </h3></a>
        </div>
     </section>
 
@@ -165,9 +161,8 @@
                 <h4>Thank You for Downloading and your feedbacks and shares</h4>
              </div>
           </div>
-          <a href="Files/Facial Hair For Beard.zip" download="Facial hair">
-             <h3 class="btn">Download</h3>
-          </a>
+          <a href="Files/Facial Hair For Beard.zip" download="Facial hair"><h3 class="btn">Download</h3></a>
+          <a href="https://www.paypal.me/stupidversion"><h3 class="btn" >Buy A Tea for me ! </h3></a>
        </div>
        <div class="productcover">
           <div class="sale">
@@ -180,9 +175,8 @@
                 <h4>Thank You for Downloading and your feedbacks and shares</h4>
              </div>
           </div>
-          <a href="Files/Facial Hair For Beard.zip" download="Facial hair">
-             <h3 class="btn">Download</h3>
-          </a>
+          <a href="Files/Facial Hair For Beard.zip" download="Facial hair"><h3 class="btn">Download</h3></a>
+            <a href="https://www.paypal.me/stupidversion"><h3 class="btn" >Buy A Tea for me ! </h3></a>
        </div>
     </section>
 
