--- a/threedmodels.html
+++ b/threedmodels.html
@@ -7,20 +7,20 @@
     <link href="scss/darktheme.css" rel="stylesheet">
     <link href="scss/responsive.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="images/SVS LOGO OFFICIAL.svg">
+    <link rel="icon" href="images/logo colored.png">
     <link href="https://use.fontawesome.com/releases/v5.11.2/css/all.css" rel="stylesheet">
     <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' />
 </head>
 <body>
-    <header class="nav-bar">
-    <div  class="navs">
-        <a href="index.html"><div class="flex"><img class="offlogo" src="images/SVS LOGO OFFICIAL.svg" alt="logoofficial"><span> Home</span></div></a>
-        <a href="wallpapers.html"><div class="flex"><i class="tapbut fas fa-mobile"></i><span> Wallpapers</span></div></a>
-        <a href="threedmodels.html"><div class="flex"><i class="tapbut fas fa-cubes"></i><span> 3D Models</span></div></a>
-        <a href="djs.html"><div class="flex"><img class="offlogo" src="djthings/DJ S LOGO.png" alt="logoofficial"><span> DJ S</span></div></a>
-        <a href="https://teespring.com/stores/stupid-version-studio"><div class="flex"><i class="tapbut fas fa-shopping-basket"></i><span> Shop</span></div></a>
-        <a href="About.html"><div class="flex"><i class="tapbut far fa-user-circle"></i><span> About</span></div></a>
-    </div>
+<header >
+<div  class="navs">
+    <a href="index.html"><div class="flex"><i class="tapbut fas fa-bars"></i><span> Home</span></div></a>
+    <a href="wallpapers.html"><div class="flex"><i class="tapbut fas fa-mobile"></i><span> Wallpapers</span></div></a>
+    <a href="threedmodels.html"><div class="flex"><i class="tapbut fas fa-cubes"></i><span> 3D Models</span></div></a>
+    <a href="djs.html"><div class="flex"><i class="tapbut  fas fa-compact-disc"></i><span> DJ S</span></div></a>
+    <a href="https://teespring.com/stores/stupid-version-studio"><div class="flex"><i class="tapbut fas fa-shopping-basket"></i><span> Shop</span></div></a>
+    <a href="About.html"><div class="flex"><i class="tapbut far fa-user-circle"></i><span> About</span></div></a>
+</div>
     <h1 id="header">3D Models</h1>
     </header>
 
