--- a/index.html
+++ b/index.html
@@ -28,17 +28,21 @@
        <h2 class="subheading"><i class="fas fa-scroll"></i> Fonts</h2>
        <div class="productcover">
           <div class="sale">
-             <div class="pot">
-                <img class="log" src="images/GOSTA.jpg">
-             </div>
+
+            <div class="pot">
+               <img class="log" src="images/GOSTA.jpg">
+            </div>
              <div class="detailes">
                 <h3 class="line">Sv GOSTA Font</h3>
                 <h4>Only Capital Letters Will Support Keep In Mind , Thank You for Downloading and your feedbacks and shares
                 </h4>
              </div>
+
           </div>
+          <div class="buttonslot">
           <a href="Files/Gosta font.zip" download="Sv GOSTA Font"><h3 class="btn"><i class="fas fa-download"></i> Download</h3></a>
           <a href="https://www.paypal.me/stupidversion"><h3 class="btn" ><i class="fas fa-mug-hot"></i> Buy A Tea for me ! </h3></a>
+         </div>
        </div>
        <div class="productcover">
           <div class="sale">
@@ -50,8 +54,10 @@
                 <h4>Only Capital Letters Will Support Keep In Mind , Thank You for Downloading and your feedbacks and shares</h4>
              </div>
           </div>
+          <div class="buttonslot">
           <a href="Files/KABAVI FONT.zip" download="Sv KABAVI Font"><h3 class="btn"><i class="fas fa-download"></i> Download</h3></a>
             <a href="https://www.paypal.me/stupidversion"><h3 class="btn" ><i class="fas fa-mug-hot"></i> Buy A Tea for me ! </h3></a>
+         </div>
        </div>
        <div class="productcover">
           <div class="sale">
@@ -63,28 +69,33 @@
                 <h4>Thank You for Downloading and your feedbacks and shares</h4>
              </div>
           </div>
+          <div class="buttonslot">
           <a href="Files/SvMasalVada-Regular.rar" download="Sv Masal vadai "><h3 class="btn"><i class="fas fa-download"></i> Download</h3></a>
           <a href="https://www.paypal.me/stupidversion"><h3 class="btn" ><i class="fas fa-mug-hot"></i> Buy A Tea for me ! </h3></a>
+         </div>
        </div>
     </section>
 
     <section class="bloc">
        <h2 class="subheading"><i class="fab fa-instagram"></i>  Instagram Filters</h2>
+       
        <div class="productcover">
           <div class="sale">
-             <div class="pot">
-                <img class="log" src="images/bigil.png">
-             </div>
+            <div class="pot">
+               <img class="log" src="images/bigil.png">
+            </div>
              <div class="detailes">
                 <h3 class="line">Bigil</h3>
                 <h4>Filter by Us , Take Selfies and share it to your friends on #Instagram</h4>
                 <h4>Thank You for your feedbacks and shares</h4>
              </div>
+
           </div>
           <a href="https://www.instagram.com/a/r/?effect_id=603678986832523">
              <h3 class="btn">Try It</h3>
           </a>
        </div>
+
        <div class="productcover">
           <div class="sale">
              <div class="pot">
@@ -161,9 +172,12 @@
                 <h4>Thank You for Downloading and your feedbacks and shares</h4>
              </div>
           </div>
+          
+          <div class="buttonslot">
           <a href="Files/Facial Hair For Beard.zip" download="Facial hair"><h3 class="btn">Download</h3></a>
           <a href="https://www.paypal.me/stupidversion"><h3 class="btn" >Buy A Tea for me ! </h3></a>
        </div>
+      </div>
        <div class="productcover">
           <div class="sale">
              <div class="pot">
@@ -175,8 +189,10 @@
                 <h4>Thank You for Downloading and your feedbacks and shares</h4>
              </div>
           </div>
-          <a href="Files/Facial Hair For Beard.zip" download="Facial hair"><h3 class="btn">Download</h3></a>
+          <div class="buttonslot">
+          <a href="Files/Fogy Brush.zip" download="Facial hair"><h3 class="btn">Download</h3></a>
             <a href="https://www.paypal.me/stupidversion"><h3 class="btn" >Buy A Tea for me ! </h3></a>
+         </div>
        </div>
     </section>
 
@@ -193,6 +209,8 @@
     </div>
     <h4>&copy;Stupid Version Studio</h4>
     </footer>
+
+    </section>
  </body>
 
 </html>
