--- a/About.html
+++ b/About.html
@@ -48,11 +48,10 @@
                         class=" socialicon fab fa-instagram"></i><span>instagram</span></a>
                 <a class="contactbuts" href="https://twitter.com/VersionStupid"><i
                         class=" socialicon fab fa-twitter"></i><span>Twitter</span></a>
+                <a class="contactbuts" href="@VG.html"><i class="socialicon fas fa-mouse-pointer"></i><span>More About the Founder</span></a>
             </div>
 
-            <a href="@VG.html">
-                <h3 class="btn">More About Founder</h3>
-            </a>
+
         </section>
         <footer>
             <h4>Version 3.0</h4>
