--- a/@VG.html
+++ b/@VG.html
@@ -23,26 +23,33 @@
 </div>
         <h1 id="header">About the Founder - Creator</h1>
 </header>
-   <img class="ceo" src="images/ceo.jpg" alt="ceo" >
+<section class="coversection">
+       <div class="productcover">
+          <div class="sale">
+             <div class="pot">
+                <img class="ceo" src="images/ceo.jpg" alt="ceo" >
+             </div>
+             <div class="detailes">
+                <h3 class="line">Vishnugopy<br>
+                Founder - Creator</h3>
+                <h4>Hello! First of all Thank you very much for your interest in Stupid Version Studio Creators. And Yes! I'm the one and only creator behind this site . 
+                    All the stuff your are downloading and using is belongs to me also they are copyrights free so you can use it freely.Also a kind request from me that does not sell our products under your brand. Give us credit when you find our products useful.A big thank you for you.</h4>
+             </div>
+          </div>
+          <div class="social">
+            <a class="contactbuts" href="mailto:vishnugoby0010@gmail.com"><i class=" socialicon fa fa-envelope" aria-hidden="true"></i><span>Gmail</span></a>
+            <a class="contactbuts" href="https://www.instagram.com/__vishnu__10/"><i class=" socialicon fab fa-instagram"></i><span>instagram</span></a>
+            <a class="contactbuts" href="https://twitter.com/_Vishnu_10"><i class=" socialicon fab fa-twitter"></i><span>Twitter</span></a>
+          </div>
+       </div>
+
+
+
+
+
   
-  <h3>VG</h3>
-  <h3>Founder - Creator</h3>
 
-      
-  <div class="social">
-    <a class="contactbuts" href="mailto:vishnugoby0010@gmail.com"><i class=" socialicon fa fa-envelope" aria-hidden="true"></i><span>Gmail</span></a>
-    <a class="contactbuts" href="https://www.instagram.com/__vishnu__10/"><i class=" socialicon fab fa-instagram"></i><span>instagram</span></a>
-    <a class="contactbuts" href="https://twitter.com/_Vishnu_10"><i class=" socialicon fab fa-twitter"></i><span>Twitter</span></a>
-  </div>
-
-  <h4  style="width: 80%;">Hello! First of all Thank you very much for your interest in Stupid Version Studio Creators. And Yes! I'm the one and only creator behind this site . 
-      All the stuff your are downloading and using is belongs to me also they are copyrights free so you can use it freely.</h4><br>
-
-
-      <h4  style="width: 80%;">Also a kind request from me that does not sell our products under your brand. Give us credit when you find our products useful.A big thank you for you.</h4> 
-  
-  
-  <a href="index.html" style="width: 90%;">
+  <a href="index.html" style="width: 100%;">
     <h3 class="btn"> Back to Our Site</h3>
 </a>
 <footer>
@@ -58,7 +65,7 @@
    </div>
    <h4>&copy;Stupid Version Studio</h4>
    </footer>
-
+</section>
 
 <style>
 
@@ -83,9 +90,6 @@ body .ceo{
     margin: 1%;
 }
 
-footer{
-    width: 80%;
-}
 
 </style>
 
