--- a/@VG.html
+++ b/@VG.html
@@ -33,7 +33,7 @@
                 <h3 class="line">Vishnugopy<br>
                 Founder - Creator</h3>
                 <h4>Hello! First of all Thank you very much for your interest in Stupid Version Studio Creators. And Yes! I'm the one and only creator behind this site . 
-                    All the stuff your are downloading and using is belongs to me also they are copyrights free so you can use it freely.Also a kind request from me that does not sell our products under your brand. Give us credit when you find our products useful.A big thank you for you.</h4>
+                    All the stuff your are downloading and using is belongs to me also they are copyrights free so you can use it freely.Also a kind request from me that do not sell our products under your brand. Give us credit when you find our products useful.A big thank you for you.</h4>
              </div>
           </div>
           <div class="social">
