--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="images/logo colored.png">
     <link href="https://use.fontawesome.com/releases/v5.11.2/css/all.css" rel="stylesheet">
+    <script src="js.js"></script>
     <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' />
 </head>
 <body>
@@ -22,6 +23,8 @@
 </div>
 <h1 id="header">Stupid Version Studio</h1>
 </header>
+
+   <div class="spinner-wrapper">loading</div>
 
     <section class="coversection">
     <section class="bloc">
