--- a/wallpapers.html
+++ b/wallpapers.html
@@ -25,6 +25,7 @@
     </header>
 
     <section class="coversection">
+        <div class="spinner-wrapper">Loading...</div>
 
         <section class="wallpapersection">
 
