--- a/@VG.html
+++ b/@VG.html
@@ -27,7 +27,7 @@
        <div class="productcover">
           <div class="sale">
              <div class="pot">
-                <img class="ceo" src="images/ceo.jpg" alt="ceo" >
+                <img class="ceo" src="images/CEO.jpg" alt="ceo" >
              </div>
              <div class="detailes">
                 <h3 class="line">Vishnugopy<br>
@@ -38,8 +38,10 @@
           </div>
           <div class="social">
             <a class="contactbuts" href="mailto:vishnugoby0010@gmail.com"><i class=" socialicon fa fa-envelope" aria-hidden="true"></i><span>Gmail</span></a>
-            <a class="contactbuts" href="https://www.instagram.com/__vishnu__10/"><i class=" socialicon fab fa-instagram"></i><span>instagram</span></a>
             <a class="contactbuts" href="https://twitter.com/_Vishnu_10"><i class=" socialicon fab fa-twitter"></i><span>Twitter</span></a>
+            <a class="contactbuts" href="https://github.com/vishnugopy"><i class="socialicon fab fa-github"></i><span>Github</span></a>
+            <a class="contactbuts" href="https://www.linkedin.com/in/vishnu-gopy-826b0b17a/"><i class="socialicon fab fa-linkedin"></i><span>Linkedin</span></a>
+            <a class="contactbuts" href="https://www.instagram.com/__vishnu__10/"><i class=" socialicon fab fa-instagram"></i><span>instagram</span></a>
           </div>
        </div>
 
