--- a/@VG.html
+++ b/@VG.html
@@ -27,7 +27,7 @@
        <div class="productcover">
           <div class="sale">
              <div class="pot">
-                <img class="ceo" src="images/CEO.jpg" alt="ceo" >
+                <img class="ceo" src="images/ceo.jpg" alt="ceo" >
              </div>
              <div class="detailes">
                 <h3 class="line">Vishnugopy<br>
