--- a/About.html
+++ b/About.html
@@ -48,7 +48,7 @@
                         class=" socialicon fab fa-instagram"></i><span>instagram</span></a>
                 <a class="contactbuts" href="https://twitter.com/VersionStupid"><i
                         class=" socialicon fab fa-twitter"></i><span>Twitter</span></a>
-                <a class="contactbuts" href="@VG.html"><i class="socialicon fas fa-mouse-pointer"></i><span>More About the Founder</span></a>
+                <a class="contactbuts" href="@VG.html"><i class="socialicon fas fa-mouse-pointer"></i><span>The Founder</span></a>
             </div>
 
 
