--- a/@VG.html
+++ b/@VG.html
@@ -30,7 +30,7 @@
                 <img class="ceo" src="images/ceo.jpeg" alt="ceo" >
              </div>
              <div class="detailes">
-                <h3 class="line">Vishnugopy<br>
+                <h3 class="line">Vishnugopy...<br>
                 Founder - Creator</h3>
                 <h4>Hello! First of all Thank you very much for your interest in Stupid Version Studio Creators. And Yes! I'm the one and only creator behind this site . 
                     All the stuff your are downloading and using is belongs to me also they are copyrights free so you can use it freely.Also a kind request from me that do not sell our products under your brand. Give us credit when you find our products useful.A big thank you for you.</h4>
@@ -79,17 +79,12 @@ body{
    
 }
 
-.ceoimage{
-    width:10%;
-}
+
 
 body .ceo{
-    width:20%;
-    height: auto;
-    border-radius: 50%;
-    border: 5px solid #012154;
+    border: 5px solid #19d3da;
     padding: 1%;
-    margin: 1%;
+    margin: 3%;
 }
 
 
