--- a/About.html
+++ b/About.html
@@ -32,7 +32,7 @@
                 Everything on this site made by us feel free to use.Anyways thank you for your support.</h4>
 
             <a href="https://www.paypal.me/stupidversion">
-                <h3 class="btn" >Buy A Tea for me ! </h3>
+                <h3 class="btn" ><i class="fas fa-coffee"></i>Buy A Tea for me ! </h3>
             </a>
 
         </section>
