--- a/djs.html
+++ b/djs.html
@@ -31,13 +31,13 @@
                 <img class="img-service" src="images/djs.jpg" alt="dj">
                 <div class="text-service">
                     <a href="tel:0033767717431">
-                        <h3 class="btn">Call</h3>
+                        <h3 class="btn"><i class="fas fa-phone-alt"></i>Call Us</h3>
                     </a>
                     <a href="tel:0033767460955">
-                        <h3 class="btn">Call</h3>
+                        <h3 class="btn"><i class="fas fa-phone-alt"></i>Call Us</h3>
                     </a>
                     <a href="https://www.instagram.com/djsandsons/">
-                        <h3 class="btn">Instragram</h3>
+                        <h3 class="btn"><i class="fab fa-instagram"></i>Instragram</h3>
                     </a>
                 </div>
             </div>
