--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                     </div>
                 </div>
                 <a href="https://www.instagram.com/a/r/?effect_id=603678986832523">
-                    <h3 class="btn"><i class="far fa-smile-wink"></i><span>Make a try!</span></h3>
+                    <h3 class="btn"><i class="fab fa-instagram"></i><span>Make a try!</span></h3>
                 </a>
             </div>
 
@@ -121,7 +121,7 @@
                     </div>
                 </div>
                 <a href="https://www.instagram.com/a/r/?effect_id=2431084013883394">
-                    <h3 class="btn"><i class="far fa-smile-wink"></i><span>Make a try!</span></h3>
+                    <h3 class="btn"><i class="fab fa-instagram"></i><span>Make a try!</span></h3>
                 </a>
             </div>
         </section>
@@ -140,7 +140,7 @@
                     </div>
                 </div>
                 <a href="web/ny.html">
-                    <h3 class="btn">Go To Site</h3>
+                    <h3 class="btn"><i class="fas fa-glass-cheers"></i>Go To Site</h3>
                 </a>
             </div>
 
@@ -155,7 +155,7 @@
                     </div>
                 </div>
                 <a href="web/x-mas.html">
-                    <h3 class="btn">Go To Site</h3>
+                    <h3 class="btn"><i class="fas fa-glass-cheers"></i>Go To Site</h3>
                 </a>
             </div>
 
@@ -170,7 +170,7 @@
                     </div>
                 </div>
                 <a href="web/tamil.html">
-                    <h3 class="btn">Go To Site</h3>
+                    <h3 class="btn"><i class="fas fa-glass-cheers"></i>Go To Site</h3>
                 </a>
             </div>
         </section>
