:tada: new site on the way

--- a/About.html
+++ b/About.html
@@ -1,73 +1,20 @@
 <!DOCTYPE html>
-<html lang="en" xml:lang="en" xmlns="http://www.w3.org/1999/xhtml">
+<html lang="en">
 
 <head>
-    <title>About Stupid Version</title>
-    <link href="scss/style.css" rel="stylesheet">
-    <link href="scss/darktheme.css" rel="stylesheet">
-    <link href="scss/responsive.css" rel="stylesheet">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="images/logo colored.png">
+    <title>Stupid Version Studio</title>
+    <link rel="stylesheet" href="style.css">
     <link href="https://use.fontawesome.com/releases/v5.11.2/css/all.css" rel="stylesheet">
-    <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' />
 </head>
+
 <body>
-<header >
-<div  class="navs">
-    <a href="index.html"><div class="flex"><i class="tapbut fas fa-bars"></i><span> Home</span></div></a>
-    <a href="wallpapers.html"><div class="flex"><i class="tapbut fas fa-mobile"></i><span> Wallpapers</span></div></a>
-    <a href="threedmodels.html"><div class="flex"><i class="tapbut fas fa-cubes"></i><span> 3D Models</span></div></a>
-    <a href="djs.html"><div class="flex"><i class="tapbut  fas fa-compact-disc"></i><span> DJ S</span></div></a>
-    <a href="https://teespring.com/stores/stupid-version-studio"><div class="flex"><i class="tapbut fas fa-shopping-basket"></i><span> Shop</span></div></a>
-    <a href="About.html"><div class="flex"><i class="tapbut far fa-user-circle"></i><span> About</span></div></a>
-</div>
-        <h1 id="header">About Us</h1>
-</header>
-    <section class="coversection">
-        <section class="bloc">
-            <h2 class="subheading"><i class="far fa-laugh-beam"></i> About us</h2>
-            <h4 style="padding:2%;">Hello , welcome to our site.
-                we are working alone to make this website possible to everyone. This is a Manpowered web site. Currently
-                we are two working behind this website.
-                Everything on this site made by us feel free to use.Anyways thank you for your support.</h4>
-
-            <a href="https://www.paypal.me/stupidversion">
-                <h3 class="btn" ><i class="fas fa-coffee"></i>Buy A Tea for me ! </h3>
-            </a>
-
-        </section>
-
-        <section class="bloc">
-            <h2 class="subheading"><i class="far fa-share-square"></i> You Can Find Us On</h2>
-            <div class="social">
-                <a class="contactbuts" href="mailto:stupidversion@gmail.com"><i class=" socialicon fa fa-envelope"
-                        aria-hidden="true"></i><span>Gmail</span></a>
-                <a class="contactbuts" href="https://play.google.com/store/apps/dev?id=7891379765966516089"><i
-                        class=" socialicon fab fa-google-play"></i><span>Playstore</span></a>
-                <a class="contactbuts" href="https://www.instagram.com/stupid_version_studio/"><i
-                        class=" socialicon fab fa-instagram"></i><span>instagram</span></a>
-                <a class="contactbuts" href="https://twitter.com/VersionStupid"><i
-                        class=" socialicon fab fa-twitter"></i><span>Twitter</span></a>
-                <a class="contactbuts" href="@VG.html"><i class="socialicon fas fa-mouse-pointer"></i><span>The Founder</span></a>
-            </div>
+    <header></header>
 
 
-        </section>
-        <footer>
-            <h4>Version 3.0</h4>
-            <h4>Shout-out to these companies to make this website possible</h4>
-           <div class="footercontrol">
-           
-           <img src="images/blender.svg" alt="foot" >
-           <img src="images/google.png" alt="foot" >
-           <img src="images/adobe.png" alt="foot" >
-           <img src="images/github.png" alt="foot" >
-           
-           </div>
-           <h4>&copy;Stupid Version Studio</h4>
-           </footer>
-    </section>
+
 </body>
-
-
+<script src="app.js"></script>
 </html>
