:tada: new site on the way

--- a/index.html
+++ b/index.html
@@ -12,9 +12,11 @@
 
 <body>
     <header></header>
-
-
+    <main>
+        <h1>Site Under Construction.. HOME PAGE HERE</h1>
+    </main>
 
 </body>
 <script src="app.js"></script>
+
 </html>
