--- a/About.html
+++ b/About.html
@@ -5,9 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Stupid Version Studio</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="responsive.css">
+    <title>About us</title>
+    <link rel="shortcut icon" href="./assets/logo.svg" type="image/x-icon">
+    <link rel="stylesheet" href="./scss/style.css">
+    <link rel="stylesheet" href="./scss/responsive.css">
     <link href="https://use.fontawesome.com/releases/v5.11.2/css/all.css" rel="stylesheet">
 </head>
 <body>
@@ -15,8 +16,8 @@
     <main>
         <h1>Site Under Construction..</h1>
     </main>
-
+    <footer></footer>
 
 </body>
-<script src="app.js"></script>
+<script src="footerandheader.js"></script>
 </html>
