--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Stupid Version Studio</title>
-    <link rel="shortcut icon" href="./logo.svg" type="image/x-icon">
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="responsive.css">
+    <link rel="shortcut icon" href="./assets/logo.svg" type="image/x-icon">
+    <link rel="stylesheet" href="./scss/style.css">
+    <link rel="stylesheet" href="./scss/responsive.css">
     <link href="https://use.fontawesome.com/releases/v5.11.2/css/all.css" rel="stylesheet">
 </head>
 
@@ -18,7 +18,7 @@
     <main>
         <section class="Nametag">
         <div class="logo_container"> 
-            <img class="main_logo" src="./logo.svg" alt="">
+            <img class="main_logo" src="./assets/logo.svg" alt="">
             <div>
                 <h1>Stupid Version Studio</h1>
                 
@@ -31,15 +31,9 @@
         </section>
     </main>
 
-    <footer>
-        <div>
-            <a href="mailto:stupidversion@gmail.com" target="_blank"><i class="fab fa-google"></i></a>
-            <a href="https://www.instagram.com/stupid_version_studio/?hl=fr" target="_blank"><i class="fab fa-instagram"></i></a>
-            <a href="https://play.google.com/store/apps/dev?id=7891379765966516089" target="_blank"><i class="fab fa-google-play"></i></a>
-        </div>
-        <p>&copy;Stupid_Version_studio_2020</p>
-    </footer>
+    <footer></footer>
 </body>
 <script src="app.js"></script>
+<script src="footerandheader.js"></script>
 
 </html>
