:tada: Web version 1

--- a/About.html
+++ b/About.html
@@ -14,7 +14,33 @@
 <body>
     <header></header>
     <main>
-        <h1>Site Under Construction..</h1>
+        <section class="about_us">
+            <h4>About us and what we do .</h4> 
+            <p>Hello! Thank You for checking out us . 
+                We are doing something to make some of you happy that's why 
+                our site is 100% free without any ads and all contents are owned by us .
+                 So if you like our service promote us on social medias Thankyou so much. 
+                <br>
+                <br>
+                And if you want you can donate us by clicking the first link via Paypal🤗</p>
+
+                 <div class="social">
+                    <a href="https://www.paypal.com/paypalme/stupidversion" target="_blank"><i class="fab fa-paypal"></i></a>
+                    <a href="mailto:stupidversion@gmail.com" target="_blank"><i class="fab fa-google"></i></a>
+                    <a href="https://www.instagram.com/stupid_version_studio/?hl=fr" target="_blank"><i class="fab fa-instagram"></i></a>
+                    <a href="https://play.google.com/store/apps/dev?id=7891379765966516089" target="_blank"><i class="fab fa-google-play"></i></a>
+                 </div>
+
+
+                 <div>
+                <h4>And Our Team Members</h4> 
+                <p>Currently we don't have a team or something everything depend on two of us. Maybe in future 😀</p>   
+
+                <h4>Our future</h4> 
+                <p>We do have lot of plans and some works behind us. So we are focusing on that. Our future will meet the time.😉</p>   
+                </div>
+        </section>
+        
     </main>
     <footer></footer>
 
