:tada: With toggle buttons

--- a/index.html
+++ b/index.html
@@ -21,9 +21,14 @@
             <img class="main_logo" src="./assets/logo.svg" alt="">
             <div>
                 <h1>Stupid Version Studio</h1>
-                
             </div>
         </div>
+        </section>
+
+        <section class="lightanddark">
+            <button class="buttonsselecter light">Light Wallpapers</button>
+            <button class="buttonsselecter dark">Dark Wallpapers</button>
+            <button class="buttonsselecter all">All Wallpapers</button>
         </section>
 
         <section class="Contentshower">
