:tada: With toggle buttons

--- a/index.html
+++ b/index.html
@@ -13,8 +13,12 @@
 </head>
 
 <body>
+    <section class="loadingscreen">
+    <img class="main_logo" src="./assets/logo.svg" alt="Loading">
+    <p>Loading ..</p>
+    </section>
     <header></header>
-  
+    
     <main>
         <section class="Nametag">
         <div class="logo_container"> 
